src/objects/csmrgp__Duplicate_Case__c.object
<CustomObject>
    <fields>
        <fullName>csmrgp__Case_Created_Date__c</fullName>
        <description>Created Date of the associated Case</description>
        <label>Case Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>csmrgp__Case_Status__c</fullName>
        <description>Status of associated Case</description>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Duplicate Cases</relationshipLabel>
        <relationshipName>Duplicate_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csmrgp__Duplicate_Group__c</fullName>
        <label>Duplicate Group</label>
        <referenceTo>csmrgp__Duplicate_Group__c</referenceTo>
        <relationshipLabel>Duplicate Cases</relationshipLabel>
        <relationshipName>Duplicate_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csmrgp__Has_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the associated Case has a Parent Case</description>
        <label>Has Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csmrgp__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Duplicate Case</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Duplicate Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>